# ex2

./: .gitignore  ImageTagger.cpp  ImageTagger.h  library2.cpp  map_tree.cpp  map_tree.h  node_list.cpp  node_list.h  timing (version 1).xlsx  ~$גיל רטוב 1 - יבש להגשה.docx  ~$ני גרפים.docx  ~$עוד רטוב 1.docx  ~WRL0003.tmp  מבני גרפים.docx  תיעוד רטוב 1.docx  תרגיל רטוב 1 - יבש להגשה.docx
ex2/: ImageTagger.cpp  ImageTagger.h  library2.cpp  submissions.txt
ex2/part1/: library1_LIST.cpp  library1_TREE.cpp
part1/part1_list/: CMakeLists.txt  library1_LIST.cpp  node_list.h
part1/part1_list/timing output/: out_Add.txt  out_Delete.txt  out_Find.txt
part1/part1_tree/: CMakeLists.txt  library1_TREE.cpp  map_tree.h
part2/: .gitignore  CMakeLists.txt  ImageTagger.cpp  ImageTagger.h  Misc.hpp  README.md  library2.cpp  map_tree.cpp  map_tree.h  node_list.cpp  node_list.h  tests.cpp
tests/DS_1_Tests_1.2/: CMakeLists.txt  tests.cpp
